--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -23,9 +23,8 @@
                                 <div class="product__price">$49.99 usd</div>
                             </div>
                         </a>
-                        <a href="#" class="btn btn--fill product__btn" target="_blank" rel="noopener noreferrer">
-                            <span>Shop</span>
-                            <span class="line"></span>
+                        <a href="#" class="btn btn--fill text-line product__btn" target="_blank" rel="noopener noreferrer">
+                            Shop
                         </a>
                     </div>
                 </div>
@@ -49,9 +48,8 @@
                                 <div class="product__price">$49.99 usd</div>
                             </div>
                         </a>
-                        <a href="#" class="btn btn--fill product__btn" target="_blank" rel="noopener noreferrer">
-                            <span>Shop</span>
-                            <span class="line"></span>
+                        <a href="#" class="btn btn--fill text-line product__btn" target="_blank" rel="noopener noreferrer">
+                            Shop
                         </a>
                     </div>
                 </div>
@@ -75,9 +73,8 @@
                                 <div class="product__price">$79.99 usd</div>
                             </div>
                         </a>
-                        <a href="#" class="btn btn--fill product__btn" target="_blank" rel="noopener noreferrer">
-                            <span>Shop</span>
-                            <span class="line"></span>
+                        <a href="#" class="btn btn--fill text-line product__btn" target="_blank" rel="noopener noreferrer">
+                            Shop
                         </a>
                     </div>
                 </div>
