--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,9 +2,11 @@
 
 $body-ff: 'Oswald', sans-serif;
 
-$body-bg         : #f7f8f3;
-$section-bg      : #abcbe2;
-$testimonials-bg : #eaedde;
+$body-bg           : #f7f8f3;
+$section-bg        : #abcbe2;
+$testimonials-bg   : #eaedde;
+$product-footer-bg : #f1f1f1;
+$gradint-bg        : #1c200b;
 
 $secondary-color      : #fff;
 $body-color           : #000000;
@@ -12,14 +14,12 @@ $title-color          : #1c1c1b;
 $primary-color        : #6e774a;
 $nav-primary-color    : #9db892;
 $tabs-primary-color   : #ced6af;
-$product-footer-bg    : #f1f1f1;
 $product-footer-border: #e1e1e1;
-$gradint-bg: #1c200b;
 
-$border-width: 1px;
-$line-width  : 45px;
-$line-widthX2: 100px;
-$gap-footer: 30px;
+$border-width : 1px;
+$line-width   : 45px;
+$line-widthX2 : 100px;
+$gap          : 30px;
 
 $space   : .06em;
 $spaceX3 : .2em;
