--- a/src/scss/_testimonials.scss
+++ b/src/scss/_testimonials.scss
@@ -2,19 +2,14 @@
     &--testimonials {
         padding: 0;
         background-color: $testimonials-bg;
-        position: relative;
-
-        
+        position: relative;   
     }
 }
 
 .testimonial {
     margin: 0;
-    // width: 100vw;
-    // width: 100%;
     position: relative;
     min-height: 100vh;
-    // overflow: hidden;
     @include flex($jc: center);
 
     &:before {
@@ -26,15 +21,14 @@
 
     &__img-wrap {
         display: block;
-        // height: 100%;
         @include posA(0,0,0,0);
         overflow: hidden;
+    }
 
-        img {
-            min-width: 100%;
-            min-height: 100%;
-            @include posA($left: 0, $bottom: 0, $right: 0);
-        }
+    &__img {
+        min-width: 100%;
+        min-height: 100%;
+        @include posA($left: 0, $bottom: 0, $right: 0);
     }
 
     &__stars {
@@ -47,69 +41,65 @@
         letter-spacing: $spaceX3;
         max-width: 830px;
         
-
         @media screen and (min-width: 576px) {
-            padding: 0 30px;
+            padding: 0 $gap;
         }
     }
 
     &__blockquote-wrap {
         margin: 0;
-        
     }
     &__blockquote {
-        margin-top: 30px;
+        margin-top: $gap;
         color: $secondary-color;
-        
     }
     &__cite {
-    //     position: relative;
-    //     display: inline-block;
-
-    //     &:before {
-    //         content: '';
-    //         display: inline-block;
-    //         @include posA(calc(50% - #{$border-width}), $left: -65px);
-    //         width: $line-width;
-    //         height: $border-width * 2;
-    //         background-color: $secondary-color;
-    //         @include tr;
-    //     }
-
-    //     color: $secondary-color;
         font-style: normal;
-    //     text-transform: uppercase;
     }
 }
 
 .swiper-buttons {
     @include posA($left: 50%, $bottom: 0);
-    z-index: 20;
+    z-index: 5;
     @include transform($delta_y: 0);
-    @include flex;
-}
+    display: none;
 
-.button-prev--bordered, .button-next--bordered {
-    z-index: 3;
-    // margin: 10px;
-    height: 100px;
-    width: 130px;
-    // @include posA($bottom: 0);
-    // @include transform;
-    border: $border-width solid $secondary-color;
-    @include flex($jc: center);
-    margin: 0;
-
-    svg {
-        // vertical-align: middle;
-        fill: $secondary-color;
+    @media screen and (min-width: 768px) {
+        @include flex;
     }
-}
-.button-prev--bordered {
-    // left: calc(50% );
-    // @include transform(-50%, 0);
-}
-.button-next--bordered {
-    // left: 50%;
-    // @include transform(-50%, 0);
+
+    &__prev, &__next {
+        cursor: pointer;
+        height: 100px;
+        width: 130px;
+        border: $border-width solid $secondary-color;
+        @include flex($jc: center);
+        @include tr;
+        svg {
+            fill: $secondary-color;
+            @include tr;
+        }
+        @include hover {
+            color: $primary-color;
+            background-color: rgba($secondary-color, .5);
+            border-color: $primary-color;
+            svg {
+                fill: $primary-color;
+            }
+        }
+    }
+    &__next {
+        @include hover {
+            svg {
+                transform: translateX($gap);
+            }
+        }
+    }
+    &__prev {
+        @include hover {
+            svg {
+                transform: translateX(-$gap);
+            }
+        }
+    }
 }
