--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -80,8 +80,13 @@
 
 .button-prev, .button-next {
     display: inline-block;
+    cursor: pointer;
     margin: 60px 30px 0;
+    @include tr;
     svg {
         fill: $primary-color;
+    }
+    @include hover {
+        transform: scale(1.2);
     }
 }
