--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -43,10 +43,10 @@
             </ul>
         </div>
         <form class="subscribe" method="POST" action="#">
-            <h4 class="title title--sm">Subscribe to Newsletter</h4>
+            <h4 class="title">Subscribe to Newsletter</h4>
             <div class="subscribe__field">
                 <input class="subscribe__input" type="email" name="email" placeholder="email">
-                <button type="submit" class="subscribe__btn btn btn--arrows">
+                <button type="submit" class="subscribe__btn btn btn--arrows btn--form">
                     <svg width="25" height="13">
                         <use xlink:href="#arrow-next"></use>
                     </svg>
