--- a/src/partials/intro.html
+++ b/src/partials/intro.html
@@ -1,10 +1,10 @@
 <section class="section section--intro section--bg" id="intro">
-    <span class="text-out text-out--line">CBD Potion health</span>
+    <span class="text-out text-line text-line--left text-line--lg">CBD Potion health</span>
     <div class="container">
         <div class="section__content section__content--intro">
             <h1 class="title title--main">Enhancing Life Excelling in Care</h1>
             <p class="subtitle">Choose Wisely. Choose CBD.</p>
-            <a href="#" class="btn text-line" target="_blank" rel="noopener noreferrer">
+            <a href="#" class="btn btn--intro text-line" target="_blank" rel="noopener noreferrer">
                 Start Shopping
             </a>
             <a href="#" class="section__btn section__btn--intro" target="_blank" rel="noopener noreferrer">
