--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -79,12 +79,12 @@
                     </div>
                 </div>
             </div>
-            <div class="button-prev">
+            <div class="btn btn--arrows button-prev">
                 <svg width="40" height="20">
                     <use xlink:href="#arrow-prev"></use>
                 </svg>
             </div>
-            <div class="button-next">
+            <div class="btn btn--arrows button-next">
                 <svg width="40" height="20">
                     <use xlink:href="#arrow-next"></use>
                 </svg>
