--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -11,19 +11,17 @@
                         <img class="testimonial__img" src="../img/testimonials-img-1.jpg" alt="testimonials mark">
                     </picture>
                     <figcaption class="testimonial__blockquote-block">
-                        <div class="container">
-                            <blockquote class="testimonial__blockquote-wrap">
-                                <ul class="testimonial__stars stars" data-stars="5">
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                </ul>
-                                <p class="testimonial__blockquote">I have tried another product after using this one successfully, and I am Back for good! The flavour, the lightness of the oil and the health benefits I have gotten with this oil are amazing!</p>
-                            </blockquote>
-                            <cite class="testimonial__cite text-line text-line--left">mark j.</cite>
-                        </div>
+                        <blockquote class="testimonial__blockquote-wrap">
+                            <ul class="testimonial__stars stars" data-stars="5">
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                            </ul>
+                            <p class="testimonial__blockquote">I have tried another product after using this one successfully, and I am Back for good! The flavour, the lightness of the oil and the health benefits I have gotten with this oil are amazing!</p>
+                        </blockquote>
+                        <cite class="testimonial__cite text-line text-line--left">mark j.</cite>
                     </figcaption>
                 </figure>
             </div>
@@ -36,19 +34,17 @@
                         <img class="testimonial__img" src="../img/testimonials-img-2.jpg" alt="testimonials tom">
                     </picture>
                     <figcaption class="testimonial__blockquote-block">
-                        <div class="container">
-                            <blockquote class="testimonial__blockquote-wrap">
-                                <ul class="testimonial__stars stars" data-stars="5">
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                </ul>
-                                <p class="testimonial__blockquote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, blanditiis repellat tempore quae placeat deserunt doloremque, dolores dicta sint rem dolorum quam dolor! Commodi, vel! Ratione aliquam officia quisquam molestias.</p>
-                            </blockquote>
-                            <cite class="testimonial__cite text-line text-line--left">tom k.</cite>
-                        </div>
+                        <blockquote class="testimonial__blockquote-wrap">
+                            <ul class="testimonial__stars stars" data-stars="5">
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                            </ul>
+                            <p class="testimonial__blockquote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, blanditiis repellat tempore quae placeat deserunt doloremque, dolores dicta sint rem dolorum quam dolor! Commodi, vel! Ratione aliquam officia quisquam molestias.</p>
+                        </blockquote>
+                        <cite class="testimonial__cite text-line text-line--left">tom k.</cite>
                     </figcaption>
                 </figure>
             </div>
@@ -61,30 +57,28 @@
                         <img class="testimonial__img" src="../img/testimonials-img-3.jpg" alt="testimonials jack">
                     </picture>
                     <figcaption class="testimonial__blockquote-block">
-                        <div class="container">
-                            <blockquote class="testimonial__blockquote-wrap">
-                                <ul class="testimonial__stars stars" data-stars="5">
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                    <li class="stars__star"><i class="fas fa-star"></i></li>
-                                </ul>
-                                <p class="testimonial__blockquote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas esse, veritatis fuga nostrum est magni omnis quasi at hic dolorem, itaque obcaecati corrupti nemo inventore.</p>
-                            </blockquote>
-                            <cite class="testimonial__cite text-line text-line--left">tom b.</cite>
-                        </div>
+                        <blockquote class="testimonial__blockquote-wrap">
+                            <ul class="testimonial__stars stars" data-stars="5">
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                                <li class="stars__star"><i class="fas fa-star"></i></li>
+                            </ul>
+                            <p class="testimonial__blockquote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas esse, veritatis fuga nostrum est magni omnis quasi at hic dolorem, itaque obcaecati corrupti nemo inventore.</p>
+                        </blockquote>
+                        <cite class="testimonial__cite text-line text-line--left">tom b.</cite>
                     </figcaption>
                 </figure>
             </div>
         </div>
         <div class="swiper-buttons">
-            <div class="swiper-buttons__prev">
+            <div class="btn btn--arrows btn--arrows-white swiper-buttons__prev">
                 <svg width="40" height="20">
                     <use xlink:href="#arrow-prev"></use>
                 </svg>
             </div>
-            <div class="swiper-buttons__next">
+            <div class="btn btn--arrows btn--arrows-white swiper-buttons__next">
                 <svg width="40" height="20">
                     <use xlink:href="#arrow-next"></use>
                 </svg>
