--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,13 +8,14 @@ $testimonials-bg   : #eaedde;
 $product-footer-bg : #f1f1f1;
 $gradint-bg        : #1c200b;
 
-$secondary-color      : #fff;
-$body-color           : #000000;
-$title-color          : #1c1c1b;
-$primary-color        : #6e774a;
-$nav-primary-color    : #9db892;
-$tabs-primary-color   : #ced6af;
-$product-footer-border: #e1e1e1;
+$secondary-color            : #fff;
+$body-color                 : #000000;
+$title-color                : #1c1c1b;
+$primary-color              : #6e774a;
+$nav-primary-color          : #9db892;
+$tabs-primary-color         : #ced6af;
+$product-footer-border      : #e1e1e1;
+$testimonials-primary-color : #aab384;
 
 $border-width : 1px;
 $line-width   : 45px;
@@ -22,5 +23,6 @@ $line-widthX2 : 100px;
 $gap          : 30px;
 
 $space   : .06em;
+$spaceX2 : .15em;
 $spaceX3 : .2em;
 $spaceX4 : .28em;
