--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -5,7 +5,7 @@
         color: $primary-color;
 
         @media screen and (min-width: 576px) {
-            margin-top: $gap * 2;
+            margin-top: ($gap * 2);
         }
     }
     &__list {
@@ -18,15 +18,9 @@
             padding-bottom: 0;
         }
 
-        &--policy {
+        &--policy, &--info {
             flex-basis: 100%;
 
-            @media screen and (min-width: 576px) {
-                flex-basis: calc((100% - #{$gap}) / 2);
-            }
-        }
-        &--info {
-            flex-basis: 100%;
             @media screen and (min-width: 576px) {
                 flex-basis: calc((100% - #{$gap}) / 2);
             }
@@ -35,7 +29,7 @@
             border-color: transparent;
             order: 1;
             flex-basis: 100%;
-            padding-bottom: calc(#{$social-line-height} + #{$gap});
+            padding-bottom: calc(#{$social-underline-height} + #{$gap});
 
             @media screen and (min-width: 576px) {
                 margin-top: $gap;
@@ -77,7 +71,7 @@
     &__input {
         color: $primary-color;
         border: none;
-        padding: 1.2em 2em;
+        padding: 1em 2em;
         width: 100%;
         text-transform: capitalize;
         background-color: transparent;
