--- a/src/scss/_testimonials.scss
+++ b/src/scss/_testimonials.scss
@@ -2,7 +2,12 @@
     &--testimonials {
         padding: 0;
         background-color: $testimonials-bg;
-        position: relative;   
+        position: relative;
+
+        .text-out {
+            left: -170px;
+            bottom: 50px;
+        }
     }
 }
 
@@ -12,27 +17,23 @@
     min-height: 100vh;
     @include flex($jc: center);
 
-    &:before {
-        content: '';
-        @include posA(0,0,0,0);
-        background-color: rgba($gradint-bg, .6);
-        z-index: 1;
-    }
-
     &__img-wrap {
         display: block;
         @include posA(0,0,0,0);
         overflow: hidden;
+
+        &:before {
+            content: '';
+            @include posA(0,0,0,0);
+            background-color: rgba($gradint-bg, .6);
+            z-index: 1;
+        }
     }
 
     &__img {
+        @include posA($left: 0, $bottom: 0, $right: 0);
         min-width: 100%;
         min-height: 100%;
-        @include posA($left: 0, $bottom: 0, $right: 0);
-    }
-
-    &__stars {
-        font-size: inherit;
     }
 
     &__blockquote-block {
@@ -40,18 +41,29 @@
         z-index: 5;
         letter-spacing: $spaceX3;
         max-width: 830px;
+        padding: $gap 15px;
         
         @media screen and (min-width: 576px) {
-            padding: 0 $gap;
+            padding-left: $gap;
+            padding-right: $gap;
         }
     }
 
     &__blockquote-wrap {
         margin: 0;
     }
+
+    &__stars {
+        font-size: inherit;
+        color: $testimonials-primary-color;
+    }
+
     &__blockquote {
         margin-top: $gap;
         color: $secondary-color;
+        max-height: 400px;
+        overflow: hidden;
+        @include clamp($clamp: 10);
     }
     &__cite {
         font-style: normal;
@@ -63,43 +75,10 @@
     z-index: 5;
     @include transform($delta_y: 0);
     display: none;
+    max-width: 260px;
+    width: 100%;
 
     @media screen and (min-width: 768px) {
         @include flex;
-    }
-
-    &__prev, &__next {
-        cursor: pointer;
-        height: 100px;
-        width: 130px;
-        border: $border-width solid $secondary-color;
-        @include flex($jc: center);
-        @include tr;
-        svg {
-            fill: $secondary-color;
-            @include tr;
-        }
-        @include hover {
-            color: $primary-color;
-            background-color: rgba($secondary-color, .5);
-            border-color: $primary-color;
-            svg {
-                fill: $primary-color;
-            }
-        }
-    }
-    &__next {
-        @include hover {
-            svg {
-                transform: translateX($gap);
-            }
-        }
-    }
-    &__prev {
-        @include hover {
-            svg {
-                transform: translateX(-$gap);
-            }
-        }
     }
 }
