--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,22 +5,22 @@
             <ul class="trust__partners partners">
                 <li class="partners__item">
                     <a class="partners__link" href="#" target="_blank" rel="noopener noreferrer">
-                        <img class="partners__img" src="../img/trust-icon-logo-1.png" alt="100% all natural">
+                        <img class="partners__img" src="img/trust-icon-logo-1.png" alt="100% all natural">
                     </a>
                 </li>
                 <li class="partners__item">
                     <a class="partners__link" href="#" target="_blank" rel="noopener noreferrer">
-                        <img class="partners__img" src="../img/trust-icon-logo-2.png" alt="zero high">
+                        <img class="partners__img" src="img/trust-icon-logo-2.png" alt="zero high">
                     </a>
                 </li>
                 <li class="partners__item">
                     <a class="partners__link" href="#" target="_blank" rel="noopener noreferrer">
-                        <img class="partners__img" src="../img/trust-icon-logo-3.png" alt="ships to all 50 states">
+                        <img class="partners__img" src="img/trust-icon-logo-3.png" alt="ships to all 50 states">
                     </a>
                 </li>
                 <li class="partners__item">
                     <a class="partners__link" href="#" target="_blank" rel="noopener noreferrer">
-                        <img class="partners__img" src="../img/trust-icon-logo-4.png" alt="lab tested">
+                        <img class="partners__img" src="img/trust-icon-logo-4.png" alt="lab tested">
                     </a>
                 </li>
             </ul>
@@ -53,10 +53,10 @@
                         </div>
                         <div class="article__img-wrap">
                             <div class="article__img-block">
-                                <img class="article__img" src="../img/about-img-1.jpg" alt="CBD how works">
+                                <img class="article__img" src="img/about-img-1.jpg" alt="CBD how works">
                             </div>
                             <div class="article__img-block">
-                                <img class="article__img" src="../img/about-img-2.jpg" alt="CBD how works">
+                                <img class="article__img" src="img/about-img-2.jpg" alt="CBD how works">
                             </div>
                         </div>
                     </article>
