--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -16,7 +16,7 @@
                                 </ul>
                                 <h4 class="title title-sm product__title">CBD 500 mg Orange Flavor Tincture</h4>
                                 <div class="product__img-wrap">
-                                    <img src="../img/products-img-1.jpg" alt="product 1" class="product__img">
+                                    <img src="img/products-img-1.jpg" alt="product 1" class="product__img">
                                 </div>
                             </div>
                             <div class="product__footer">
@@ -41,7 +41,7 @@
                                 </ul>
                                 <h4 class="title title-sm product__title">Black ICE CBD Muscle Rub 200 mg</h4>
                                 <div class="product__img-wrap">
-                                    <img src="../img/products-img-2.jpg" alt="product 2" class="product__img">
+                                    <img src="img/products-img-2.jpg" alt="product 2" class="product__img">
                                 </div>
                             </div>
                             <div class="product__footer">
@@ -66,7 +66,7 @@
                                 </ul>
                                 <h4 class="title title-sm product__title">CBD+Curcumin Coffee 750 mg</h4>
                                 <div class="product__img-wrap">
-                                    <img src="../img/products-img-3.jpg" alt="product 3" class="product__img">
+                                    <img src="img/products-img-3.jpg" alt="product 3" class="product__img">
                                 </div>
                             </div>
                             <div class="product__footer">
@@ -92,8 +92,3 @@
         </div>
     </div>
 </section>
-
-
-<script>
-    
-</script>
