--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -5,10 +5,10 @@
             <div class="swiper-slide">
                 <figure class="testimonial">
                     <picture class="testimonial__img-wrap">
-                        <source srcset="../img/testimonials-img-1-sm.jpg" media="(max-width: 425px)">
-                        <source srcset="../img/testimonials-img-1-md.jpg" media="(max-width: 768px)">
-                        <source srcset="../img/testimonials-img-1-lg.jpg" media="(max-width: 1024px)">
-                        <img class="testimonial__img" src="../img/testimonials-img-1.jpg" alt="testimonials mark">
+                        <source srcset="img/testimonials-img-1-sm.jpg" media="(max-width: 425px)">
+                        <source srcset="img/testimonials-img-1-md.jpg" media="(max-width: 768px)">
+                        <source srcset="img/testimonials-img-1-lg.jpg" media="(max-width: 1024px)">
+                        <img class="testimonial__img" src="img/testimonials-img-1.jpg" alt="testimonials mark">
                     </picture>
                     <figcaption class="testimonial__blockquote-block">
                         <blockquote class="testimonial__blockquote-wrap">
@@ -28,10 +28,10 @@
             <div class="swiper-slide">
                 <figure class="testimonial">
                     <picture class="testimonial__img-wrap">
-                        <source srcset="../img/testimonials-img-2-sm.jpg" media="(max-width: 425px)">
-                        <source srcset="../img/testimonials-img-2-md.jpg" media="(max-width: 768px)">
-                        <source srcset="../img/testimonials-img-2-lg.jpg" media="(max-width: 1024px)">
-                        <img class="testimonial__img" src="../img/testimonials-img-2.jpg" alt="testimonials tom">
+                        <source srcset="img/testimonials-img-2-sm.jpg" media="(max-width: 425px)">
+                        <source srcset="img/testimonials-img-2-md.jpg" media="(max-width: 768px)">
+                        <source srcset="img/testimonials-img-2-lg.jpg" media="(max-width: 1024px)">
+                        <img class="testimonial__img" src="img/testimonials-img-2.jpg" alt="testimonials tom">
                     </picture>
                     <figcaption class="testimonial__blockquote-block">
                         <blockquote class="testimonial__blockquote-wrap">
@@ -51,10 +51,10 @@
             <div class="swiper-slide">
                 <figure class="testimonial">
                     <picture class="testimonial__img-wrap">
-                        <source srcset="../img/testimonials-img-3-sm.jpg" media="(max-width: 425px)">
-                        <source srcset="../img/testimonials-img-3-md.jpg" media="(max-width: 768px)">
-                        <source srcset="../img/testimonials-img-3-lg.jpg" media="(max-width: 1024px)">
-                        <img class="testimonial__img" src="../img/testimonials-img-3.jpg" alt="testimonials jack">
+                        <source srcset="img/testimonials-img-3-sm.jpg" media="(max-width: 425px)">
+                        <source srcset="img/testimonials-img-3-md.jpg" media="(max-width: 768px)">
+                        <source srcset="img/testimonials-img-3-lg.jpg" media="(max-width: 1024px)">
+                        <img class="testimonial__img" src="img/testimonials-img-3.jpg" alt="testimonials jack">
                     </picture>
                     <figcaption class="testimonial__blockquote-block">
                         <blockquote class="testimonial__blockquote-wrap">
