--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -5,7 +5,7 @@
 }
 
 .container-slider {
-    padding-top: 80px;
+    margin-top: 80px;
     max-width: 1920px;
     width: 100%;
 }
@@ -37,7 +37,6 @@
         height: 270px;
         margin-top: 25px;
         overflow: hidden;
-        @include flex($jc: center);
     }
     &__footer {
         background-color: $product-footer-bg;
@@ -68,7 +67,6 @@
     &__star {
         display: inline-block;
         
-
         [data-stars="0"] &:nth-child(n + 1),
         [data-stars="1"] &:nth-child(n + 2),
         [data-stars="2"] &:nth-child(n + 3),
@@ -81,14 +79,4 @@
 
 .button-prev, .button-next {
     margin: $gap ($gap / 2) 0;
-//     display: inline-block;
-//     cursor: pointer;
-//     margin: 60px 30px 0;
-//     @include tr;
-//     svg {
-//         fill: $primary-color;
-//     }
-//     @include hover {
-//         transform: scale(1.2);
-//     }
 }
