--- a/src/scss/_testimonials.scss
+++ b/src/scss/_testimonials.scss
@@ -41,7 +41,7 @@
         z-index: 5;
         letter-spacing: $spaceX3;
         max-width: 830px;
-        padding: $gap 15px;
+        padding: $gap ($gap / 2);
         
         @media screen and (min-width: 576px) {
             padding-left: $gap;
