--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,7 +6,8 @@ $body-bg           : #f7f8f3;
 $section-bg        : #abcbe2;
 $testimonials-bg   : #eaedde;
 $product-footer-bg : #f1f1f1;
-$gradint-bg        : #1c200b;
+$gradient-bg       : #1c200b;
+$gradient-bg-intro : linear-gradient(to bottom, #a2abb5 0%, transparent 20%, transparent 100%);
 
 $secondary-color            : #fff;
 $body-color                 : #000000;
