--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -20,10 +20,10 @@
                                 </div>
                             </div>
                             <div class="product__footer">
-                                <div class="product__price">
-                                    <span>$</span>
-                                    <span>49.99</span>
-                                    <span>usd</span>
+                                <div class="product__price price">
+                                    <span class="price__currency-icon">$</span>
+                                    <span class="price__amount">49.99</span>
+                                    <span class="price__currency">usd</span>
                                 </div>
                             </div>
                         </a>
@@ -49,10 +49,10 @@
                                 </div>
                             </div>
                             <div class="product__footer">
-                                <div class="product__price">
-                                    <span>$</span>
-                                    <span>49.99</span>
-                                    <span>usd</span>
+                                <div class="product__price price">
+                                    <span class="price__currency-icon">$</span>
+                                    <span class="price__amount">49.99</span>
+                                    <span class="price__currency">usd</span>
                                 </div>
                             </div>
                         </a>
@@ -78,10 +78,10 @@
                                 </div>
                             </div>
                             <div class="product__footer">
-                                <div class="product__price">
-                                    <span>$</span>
-                                    <span>79.99</span>
-                                    <span>usd</span>
+                                <div class="product__price price">
+                                    <span class="price__currency-icon">$</span>
+                                    <span class="price__amount">79.99</span>
+                                    <span class="price__currency">usd</span>
                                 </div>
                             </div>
                         </a>
