--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -81,14 +81,14 @@
 }
 
 .tab {
-    @include flex;
+    @include flex($jc: center);
     cursor: pointer;  
     @include tr;
     border-bottom: $border-width * 2 solid transparent;
     position: relative;
     
     & + & {
-        margin-left: 15px;
+        margin-left: ($gap / 2);
 
         @media screen and (min-width: 576px) {
             margin-left: 25px;
@@ -113,13 +113,11 @@
 }
 
 .article  {
-    display: none;
     min-height: 700px;
     padding: 80px 0 0;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
     text-align: center;
+    @include flex($df: none, $jc: center);
+    flex-wrap: wrap;
 
     @media screen and (min-width: 992px) {
         justify-content: space-between;
@@ -140,14 +138,14 @@
         }
         @media screen and (min-width: 1200px) {
             flex-basis: 500px;
-            padding-right: 30px;
+            padding-right: $gap;
         }
     }
 
     &__title {
         margin-bottom: 40px;
         line-height: 1.6;
-        color: #000;
+        color: $body-color;
 
         @media screen and (min-width: 992px) {
             max-width: 300px;
@@ -155,7 +153,7 @@
     }
     &__text {
         & + & {
-            margin-top: 30px;
+            margin-top: $gap;
             @media screen and (min-width: 992px) {
                 margin-top: 50px;
             }
@@ -171,7 +169,7 @@
 
     &__img-wrap {
         flex-basis: 570px;
-        margin-top: 30px;
+        margin-top: $gap;
 
         @media screen and (min-width: 992px) {
             flex-basis: 50%;
@@ -179,7 +177,7 @@
         }
         @media screen and (min-width: 1200px) {
             flex-basis: 600px;
-            padding-left: 30px;
+            padding-left: $gap;
         }
     }
 
@@ -189,7 +187,7 @@
         position: relative;
         padding-top: 53%;
         & + & {
-            margin-top: 30px;
+            margin-top: $gap;
         }
     }
 
