--- a/src/scss/_testimonials.scss
+++ b/src/scss/_testimonials.scss
@@ -25,7 +25,7 @@
         &:before {
             content: '';
             @include posA(0,0,0,0);
-            background-color: rgba($gradint-bg, .6);
+            background-color: rgba($gradient-bg, .6);
             z-index: 1;
         }
     }
