--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -118,8 +118,12 @@ body {
     font-size: 2.4rem;
     letter-spacing: $spaceX4;
     margin-top: 15px;
-    margin-bottom: 45px;
+    margin-bottom: 15px;
     text-transform: capitalize;
+
+    @media screen and (min-width: 576px) {
+        margin-bottom: 45px;
+    }
 }
 
 .btn {
